--- a/src/app/login/signup/signup.component.scss
+++ b/src/app/login/signup/signup.component.scss
@@ -3,3 +3,12 @@
     max-width: 680px !important;
     margin: auto;
 }
+.label{
+    text-align: left;
+}
+.required-title {
+    color: red;
+}
+.input-text{
+    min-height: 33px;
+}
