dieu phoi hop dong

--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.scss
@@ -5,6 +5,8 @@
   /*CSS counters to number the steps*/
   counter-reset: step;
   padding: 0;
+  display: flex;
+  justify-content: center;
 }
 
 #progressbar li {
