--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/contract-header/contract-header.component.html
@@ -1,12 +1,11 @@
-<div class="col-md-12 col-md-offset-3" style="display: flex; height: 74px">
+<div class="col-md-12 col-md-offset-3">
   <!-- step by step -->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
-      <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
+      <!-- <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
                       step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
          <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div>
-      </li>
-
+      </li> -->
       <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
                      step == 'confirm-contract') ? 'active' : 'inactive'">
          <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người xử lý hợp đồng</div>
