--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -8,7 +8,7 @@
             <!--      <div>-->
             <div *ngFor="let d of this.datas.contract_user_sign" class="show-list-name-class"
                 style="display: inline-block; margin-bottom: 15px">
-                <div *ngIf="!d.sign_config.position" class="resize-drag" (click)="showThumbnail()"
+                <div *ngIf="!d.sign_config.position" [ngClass]="setClass(d)" (click)="showThumbnail()"
                     [id]=getIdSignChuaKeo(d.id)>
                     <div class="signature-sample-drag" style="position: relative">
                         <div *ngIf="d.sign_unit == 'so_tai_lieu' || d.sign_unit == 'text'" [ngStyle]="setWidth(d)"
