--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -4,7 +4,7 @@
 
     </div>
     <div class="right-panel">
-      <div class="input-form ng-touched ng-pristine ng-invalid" style="display: table;top: 0;left: 0;width: 100%;text-align: center;">
+      <div class="input-form ng-touched ng-pristine ng-invalid" style="display: table;top: 0;left: 0;width: 100%;height: 75%;text-align: center;">
         <div style="display: table-cell;vertical-align: middle;">
         <form [formGroup]="addForm">
           <div style="margin: 0 30px;color:#106DB6; font-size: 30px;">{{'signup' | translate}}</div>
@@ -13,79 +13,104 @@
               <div class="col-md-6">
                 <div class="label text-color">{{'Tên tổ chức' | translate }} <span class="required-title">*</span></div>
                 <div class="input-line">
-                  <input type="text" id="username" placeholder="{{'organization' | translate}}"
-                    formControlName="username" class="input-text"/>
+                  <input type="text" placeholder="{{'Nhập tên tổ chức' | translate}}"
+                    formControlName="name" class="input-text"/>
+                </div>
+                <div *ngIf="submitted && f.name.errors" class="invalid">
+                  <div *ngIf="f.name.errors.required">{{'error.unit.name.required' | translate}}</div>
+                  <div *ngIf="f.name.errors.pattern">{{'Tên tổ chức không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="label text-color">{{'Quy mô' | translate }} <span class="required-title">*</span></div>
                 <div class="input-line">
-                  <input type="text" id="username" placeholder="{{'scale' | translate}}"
-                    formControlName="username" class="input-text"/>
+                  <input type="text" placeholder="{{'Nhập quy mô' | translate}}"
+                    formControlName="size" class="input-text"/>
+                </div>
+                <div *ngIf="submitted && f.size.errors" class="invalid">
+                  <div *ngIf="f.size.errors.required">{{'Quy mô không được để trống' | translate}}</div>
+                  <div *ngIf="f.size.errors.pattern">{{'Quy mô không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
               </div>
             </div>
 
-            <div class="row" style="padding-top: 10px;">
+            <div class="row" style="padding-top: 2%;">
               <div class="col-md-6">
-                <div class="label text-color">{{'Địa chỉ' | translate }} <span class="required-title">*</span></div>
+                <div class="label text-color">{{'Địa chỉ' | translate }}</div>
                 <div class="input-line">
-                  <input type="text" id="username" placeholder="{{'address' | translate}}"
-                    formControlName="username" class="input-text"/>
+                  <input type="text" placeholder="{{'Nhập địa chỉ' | translate}}"
+                    formControlName="address" class="input-text"/>
+                </div>
+                <div *ngIf="submitted && f.address.errors" class="invalid">
+                  <div *ngIf="f.address.errors.pattern">{{'Địa chỉ không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="label text-color">{{'Mã số thuế' | translate }} <span class="required-title">*</span></div>
                 <div class="input-line">
-                  <input type="text" id="username" placeholder="{{'tax_code' | translate}}"
-                    formControlName="username" class="input-text"/>
+                  <input type="text" placeholder="{{'Nhập mã số thuế' | translate}}"
+                    formControlName="tax_code" class="input-text"/>
+                </div>
+                <div *ngIf="submitted && f.tax_code.errors" class="invalid">
+                  <div *ngIf="f.tax_code.errors.required">{{'Mã số thuế không được để trống' | translate}}</div>
+                  <div *ngIf="f.tax_code.errors.pattern">{{'Mã số thuế không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
               </div>
             </div>
 
-            <div class="row" style="padding-top: 10px;">
+            <div class="row" style="padding-top: 2%;">
               <div class="col-md-6">
                 <div class="label text-color">{{'Người đại diện' | translate }} <span class="required-title">*</span></div>
                 <div class="input-line">
-                  <input type="text" id="username" placeholder="{{'representative' | translate}}"
-                    formControlName="username" class="input-text"/>
+                  <input type="text" placeholder="{{'Nhập người đại diện' | translate}}"
+                    formControlName="representatives" class="input-text"/>
+                </div>
+                <div *ngIf="submitted && f.representatives.errors" class="invalid">
+                  <div *ngIf="f.representatives.errors.required">{{'Người đại diện không được để trống' | translate}}</div>
+                  <div *ngIf="f.representatives.errors.pattern">{{'Người đại diện không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="label text-color">{{'Chức vụ' | translate }} <span class="required-title">*</span></div>
                 <div class="input-line">
-                  <input type="text" id="username" placeholder="{{'position' | translate}}"
-                    formControlName="username" class="input-text"/>
+                  <input type="text" placeholder="{{'Nhập chức vụ' | translate}}"
+                    formControlName="position" class="input-text"/>
+                </div>
+                <div *ngIf="submitted && f.position.errors" class="invalid">
+                  <div *ngIf="f.position.errors.required">{{'Chức vụ không được để trống' | translate}}</div>
+                  <div *ngIf="f.position.errors.pattern">{{'Chức vụ không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
               </div>
             </div>
 
-            <div class="row" style="padding-top: 10px;">
+            <div class="row" style="padding-top: 2%;">
               <div class="col-md-6">
-                <div class="label text-color">{{'Email' | translate }} <span class="required-title">*</span></div>
+                  <div class="label text-color">{{'Email' | translate }} <span class="required-title">*</span></div>
                   <div class="input-line">
-                    <input type="text" id="username" placeholder="{{'user.email' | translate}}"
-                      formControlName="username" class="input-text"/>
+                    <input type="text" placeholder="{{'Nhập email' | translate}}"
+                      formControlName="email" class="input-text"/>
+                  </div>
+                  <div *ngIf="submitted && f.email.errors" class="invalid">
+                    <div *ngIf="f.email.errors.required">{{'Email không được để trống' | translate}}</div>
+                    <div *ngIf="f.email.errors.email">{{'Email không đúng định dạng' | translate}}</div>
                   </div>
               </div>
               <div class="col-md-6">
                 <div class="label text-color">{{'Số điện thoại' | translate }} <span class="required-title">*</span></div>
                 <div class="input-line">
-                  <input type="text" id="username" placeholder="{{'user.phone' | translate}}"
-                    formControlName="username" class="input-text"/>
+                  <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}"
+                    formControlName="phone" class="input-text"/>
+                </div>
+                <div *ngIf="submitted && f.phone.errors" class="invalid">
+                  <div *ngIf="f.phone.errors.required">{{'Số điện thoại không được để trống' | translate}}</div>
+                  <div *ngIf="f.phone.errors.pattern">{{'Số điện thoại không đúng định dạng' | translate}}</div>
                 </div>
               </div>
             </div>
 
-            <div class="form-group">
-              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-                <strong>{{errorDetail}}</strong>
-              </p>
-            </div>
-
-            <div class="form-group sub-login" style="width: 60%;margin: 0 auto;">
-              <button class="btn btn-lg btn-block" (click)="sendSignup()">{{'btn.sendRequest' | translate}}</button>
-            </div>
+              <div class="form-group sub-login" style="width: 60%;margin: 0 auto;padding-top: 4%;">
+                <button class="btn btn-lg btn-block" (click)="onSubmit()">{{'btn.sendRequest' | translate}}</button>
+              </div>
             </div>
         </form>
       </div>
