--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
   <div class="full-height d-flex flex-row">
     <div class="left-background"></div>
     <div class="right-panel">
-      <div ngbDropdown class="d-inline-block header_language">
+      <!-- <div ngbDropdown class="d-inline-block header_language">
         <div class="social-icons" ngbDropdownToggle>
           <span class="{{'language_icon' | translate }}"></span>
           <div class="label">{{'language' | translate }}</div>
@@ -24,7 +24,7 @@
               <div>{{'language_vi' | translate }}</div></div>
           </button>
         </div>
-      </div>
+      </div> -->
       <div class="small-logo d-flex flex-column justify-content-center">
         <div>
           <img src="../../assets/img/logo_eContract_21.svg" width="300px" style="max-width: 50%;"/>
