--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.scss
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.scss
@@ -111,6 +111,7 @@
   color: white;
   border: 1px solid #808183;
   margin: 0 5px;
+  outline: none;
 }
 .btn_submit{
   width: 90px;
@@ -119,4 +120,5 @@
   color: white;
   border: 1px solid #87CAFF;
   margin: 0 5px;
+  outline: none;
 }
