--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -2,9 +2,9 @@
   <div class="col-md-5" style="display: flex; flex-direction: column">
     <div class="form-group">
       <div class="label_item">Mẫu hợp đồng <span class="require_star">*</span></div>
-      <div>
+      <div [style.background]="action == 'edit' ? '#ddd' : ''">
         <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="this.datasForm.form_id" optionLabel="name"
-          optionValue="id" placeholder="Chọn hợp đồng" [filter]="true" filterBy="name" [showClear]="true"
+          optionValue="id" placeholder="Chọn hợp đồng" [filter]="true" filterBy="name" [showClear]="true" [disabled]="action == 'edit'"
           (onChange)="OnChangeForm($event)">
         </p-dropdown>
       </div>
